arm-template/deploy_fwb_ha.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "resourceNamePrefix": {
            "defaultValue": "fweb-ha",
            "minLength": 3,
            "maxLength": 48,
            "type": "string",
            "metadata": {
                "description": "Name prefix for resources. Must be 3-48 characters."
            }
        },
        "vmSku": {
            "type": "string",
            "defaultValue": "Standard_F2s_v2",
            "allowedValues": [
                "Standard_F2s_v2",
                "Standard_F4s_v2",
                "Standard_F8s_v2"
            ],
            "metadata": {
                "description": "Size of VM in the FortiWeb HA set."
            }
        },
        "availabilityOptions": {
            "type": "string",
            "allowedValues": [
                "Availability Set",
                "Availability Zones"
            ],
            "defaultValue": "Availability Set",
            "metadata": {
                "description": "Deploy FortiWeb VMs in an Availability Set or Availability Zones."
            }
        },
        "acceleratedNetworking": {
            "type": "bool",
            "defaultValue": false,
            "metadata": {
                "description": "Enable Accelerated Networking. Only available on supported VM sizes."
            }
        },
        "vmAdminUsername": {
            "defaultValue": "fortiuser",
            "minLength": 3,
            "maxLength": 48,
            "type": "string",
            "metadata": {
                "description": "Admin username. Must not be admin or root."
            }
        },
        "vmAdminPassword": {
            "type": "securestring",
            "metadata": {
                "description": "Password must be 6-72 characters and satisfy at least 3 complexity requirements."
            }
        },
        "vmImageVersion": {
            "defaultValue": "latest",
            "type": "string",
            "allowedValues": [
                "latest",
                "8.0.4",
                "8.0.2",
                "8.0.1",
                "7.6.7",
                "7.6.6",
                "7.6.4",
                "7.6.1",
                "7.6.0",
                "7.4.12",
                "7.4.11",
                "7.4.9",
                "7.4.5",
                "7.4.4",
                "7.4.3",
                "7.4.0"
            ],
            "metadata": {
                "description": "FortiWeb image version."
            }
        },
        "vnetNewOrExisting": {
            "defaultValue": "existing",
            "allowedValues": [
                "new",
                "existing"
            ],
            "type": "string",
            "metadata": {
                "description": "Identify whether to use a new or existing vnet."
            }
        },
        "vnetResourceGroup": {
            "defaultValue": "[resourceGroup().name]",
            "type": "string",
            "metadata": {
                "description": "Resource group of the existing virtual network."
            }
        },
        "vnetName": {
            "defaultValue": "vnet-app-protection",
            "minLength": 3,
            "maxLength": 48,
            "type": "string",
            "metadata": {
                "description": "Name of the Azure virtual network."
            }
        },
        "vnetAddressPrefix": {
            "defaultValue": "10.0.0.0/16",
            "type": "string",
            "metadata": {
                "description": "Virtual Network address prefix. Required when vnetNewOrExisting is new."
            }
        },
        "vnetSubnet1Name": {
            "defaultValue": "external",
            "minLength": 3,
            "maxLength": 48,
            "type": "string",
            "metadata": {
                "description": "Name of Subnet1 (external)."
            }
        },
        "vnetSubnet1Prefix": {
            "defaultValue": "10.0.1.0/24",
            "type": "string",
            "metadata": {
                "description": "Prefix of Subnet1. Required when vnetNewOrExisting is new."
            }
        },
        "vnetSubnet2Name": {
            "defaultValue": "internal",
            "minLength": 3,
            "maxLength": 48,
            "type": "string",
            "metadata": {
                "description": "Name of Subnet2 (internal)."
            }
        },
        "vnetSubnet2Prefix": {
            "defaultValue": "10.0.2.0/24",
            "type": "string",
            "metadata": {
                "description": "Prefix of Subnet2. Required when vnetNewOrExisting is new."
            }
        },
        "loadBalancerType": {
            "defaultValue": "Internal",
            "type": "string",
            "allowedValues": [
                "Internal",
                "Public"
            ],
            "metadata": {
                "description": "Internal LB for private traffic, Public LB for internet-facing traffic."
            }
        },
        "fortiwebLicenseFortiFlexA": {
            "type": "securestring",
            "defaultValue": "",
            "metadata": {
                "description": "FortiFlex licence token for FortiWeb instance A (VM 1)."
            }
        },
        "fortiwebLicenseFortiFlexB": {
            "type": "securestring",
            "defaultValue": "",
            "metadata": {
                "description": "FortiFlex licence token for FortiWeb instance B (VM 2)."
            }
        }
    },
    "variables": {
        "networkApiVersion": "2022-07-01",
        "storageApiVersion": "2022-09-01",
        "computeApiVersion": "2022-11-01",
        "location": "[resourceGroup().location]",
        "virtualNetworkName": "[parameters('vnetName')]",
        "subnet1ID": "[resourceId(parameters('vnetResourceGroup'), 'Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('vnetSubnet1Name'))]",
        "subnet2ID": "[resourceId(parameters('vnetResourceGroup'), 'Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('vnetSubnet2Name'))]",
        "vmNamePrefix": "[concat(parameters('resourceNamePrefix'), '-vm')]",
        "nicExternalNamePrefix": "[concat(parameters('resourceNamePrefix'), '-external-nic')]",
        "nicInternalNamePrefix": "[concat(parameters('resourceNamePrefix'), '-internal-nic')]",
        "publicIPNamePrefix": "[concat(parameters('resourceNamePrefix'), '-nic-pip')]",
        "lbName": "[concat(parameters('resourceNamePrefix'), '-lb')]",
        "lbPublicIPName": "[concat(parameters('resourceNamePrefix'), '-lb-pip')]",
        "nsgName": "[concat(parameters('resourceNamePrefix'), '-nsg')]",
        "lbBackendPoolName": "FwbHaLBBackendPool",
        "lbResourceId": "[resourceId('Microsoft.Network/loadBalancers', variables('lbName'))]",
        "availabilitySetName": "[concat(parameters('resourceNamePrefix'), '-avset')]",
        "availabilitySetRef": {
            "id": "[resourceId('Microsoft.Compute/availabilitySets', variables('availabilitySetName'))]"
        },
        "storageAccountName": "[toLower(concat(take(replace(parameters('resourceNamePrefix'),'-',''), 10), uniqueString(resourceGroup().id)))]",
        "storageContainerName": "fwebha",
        "lbFrontendConfigMap": {
            "Internal": {
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                    "id": "[variables('subnet1ID')]"
                },
                "privateIPAddressVersion": "IPv4"
            },
            "Public": {
                "publicIPAddress": {
                    "id": "[resourceId('Microsoft.Network/publicIpAddresses', variables('lbPublicIPName'))]"
                }
            }
        },
        "useAZ": "[and(not(empty(pickZones('Microsoft.Compute', 'virtualMachines', variables('location')))), equals(parameters('availabilityOptions'), 'Availability Zones'))]",
        "zone1": [
            "1"
        ],
        "zone2": [
            "2"
        ],
        "sn1IPArray": "[split(parameters('vnetSubnet1Prefix'),'.')]",
        "sn1IPArray2ndString": "[string(variables('sn1IPArray')[3])]",
        "sn1IPArray2nd": "[split(variables('sn1IPArray2ndString'),'/')]",
        "sn1IPArray3": "[string(add(int(variables('sn1IPArray2nd')[0]),1))]",
        "sn1IPArray2": "[string(int(variables('sn1IPArray')[2]))]",
        "sn1IPArray1": "[string(int(variables('sn1IPArray')[1]))]",
        "sn1IPArray0": "[string(int(variables('sn1IPArray')[0]))]",
        "sn1GatewayIP": "[concat(variables('sn1IPArray0'),'.',variables('sn1IPArray1'),'.',variables('sn1IPArray2'),'.',variables('sn1IPArray3'))]",
        "vmImagePlan": {
            "name": "fortinet_fw-vm",
            "product": "fortinet_fortiweb-vm_v5",
            "publisher": "fortinet"
        },
        "imageReference": {
            "publisher": "fortinet",
            "offer": "fortinet_fortiweb-vm_v5",
            "sku": "fortinet_fw-vm",
            "version": "[parameters('vmImageVersion')]"
        }
    },
    "resources": [
        {
            "condition": "[not(variables('useAZ'))]",
            "apiVersion": "[variables('computeApiVersion')]",
            "type": "Microsoft.Compute/availabilitySets",
            "name": "[variables('availabilitySetName')]",
            "location": "[variables('location')]",
            "sku": {
                "name": "Aligned"
            },
            "properties": {
                "platformUpdateDomainCount": 2,
                "platformFaultDomainCount": 2
            }
        },
        {
            "apiVersion": "[variables('networkApiVersion')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('nsgName')]",
            "location": "[variables('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "allowSSH",
                        "properties": {
                            "description": "Allow SSH traffic",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allowHTTP",
                        "properties": {
                            "description": "Allow HTTP traffic",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allowHTTPS",
                        "properties": {
                            "description": "Allow HTTPS traffic",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1020,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allowMgmtHTTP",
                        "properties": {
                            "description": "Allow HTTP management traffic",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8080",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1030,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allowMgmtHTTPS",
                        "properties": {
                            "description": "Allow HTTPS management traffic",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1040,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "condition": "[equals(parameters('vnetNewOrExisting'), 'new')]",
            "apiVersion": "[variables('networkApiVersion')]",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('virtualNetworkName')]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('vnetAddressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('vnetSubnet1Name')]",
                        "properties": {
                            "addressPrefix": "[parameters('vnetSubnet1Prefix')]"
                        }
                    },
                    {
                        "name": "[parameters('vnetSubnet2Name')]",
                        "properties": {
                            "addressPrefix": "[parameters('vnetSubnet2Prefix')]"
                        }
                    }
                ]
            }
        },
        {
            "condition": "[equals(parameters('loadBalancerType'), 'Public')]",
            "apiVersion": "[variables('networkApiVersion')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('lbPublicIPName')]",
            "location": "[variables('location')]",
            "sku": {
                "name": "Standard"
            },
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "apiVersion": "[variables('networkApiVersion')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[concat(variables('publicIPNamePrefix'), copyIndex(1))]",
            "location": "[variables('location')]",
            "sku": {
                "name": "Standard"
            },
            "properties": {
                "publicIPAllocationMethod": "Static"
            },
            "copy": {
                "name": "publicIPCopy",
                "count": 2
            }
        },
        {
            "apiVersion": "[variables('networkApiVersion')]",
            "type": "Microsoft.Network/loadBalancers",
            "name": "[variables('lbName')]",
            "location": "[variables('location')]",
            "sku": {
                "name": "Standard"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIpAddresses', variables('lbPublicIPName'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]"
            ],
            "properties": {
                "frontendIPConfigurations": [
                    {
                        "name": "LBFrontEnd",
                        "properties": "[variables('lbFrontendConfigMap')[parameters('loadBalancerType')]]"
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "[variables('lbBackendPoolName')]"
                    }
                ],
                "probes": [
                    {
                        "name": "probeHTTP",
                        "properties": {
                            "protocol": "Tcp",
                            "port": 80,
                            "intervalInSeconds": 5,
                            "numberOfProbes": 2
                        }
                    },
                    {
                        "name": "probeHTTPS",
                        "properties": {
                            "protocol": "Tcp",
                            "port": 443,
                            "intervalInSeconds": 5,
                            "numberOfProbes": 2
                        }
                    }
                ],
                "loadBalancingRules": [
                    {
                        "name": "ruleHTTP",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[concat(variables('lbResourceId'), '/frontendIPConfigurations/LBFrontEnd')]"
                            },
                            "backendAddressPool": {
                                "id": "[concat(variables('lbResourceId'), '/backendAddressPools/', variables('lbBackendPoolName'))]"
                            },
                            "protocol": "Tcp",
                            "frontendPort": 80,
                            "backendPort": 80,
                            "enableFloatingIP": true,
                            "idleTimeoutInMinutes": 4,
                            "probe": {
                                "id": "[concat(variables('lbResourceId'), '/probes/probeHTTP')]"
                            }
                        }
                    },
                    {
                        "name": "ruleHTTPS",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[concat(variables('lbResourceId'), '/frontendIPConfigurations/LBFrontEnd')]"
                            },
                            "backendAddressPool": {
                                "id": "[concat(variables('lbResourceId'), '/backendAddressPools/', variables('lbBackendPoolName'))]"
                            },
                            "protocol": "Tcp",
                            "frontendPort": 443,
                            "backendPort": 443,
                            "enableFloatingIP": true,
                            "idleTimeoutInMinutes": 4,
                            "probe": {
                                "id": "[concat(variables('lbResourceId'), '/probes/probeHTTPS')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "[variables('storageApiVersion')]",
            "type": "Microsoft.Storage/storageAccounts",
            "name": "[variables('storageAccountName')]",
            "location": "[variables('location')]",
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "StorageV2",
            "properties": {
                "accessTier": "Hot",
                "supportsHttpsTrafficOnly": true,
                "minimumTlsVersion": "TLS1_2",
                "allowBlobPublicAccess": false
            }
        },
        {
            "apiVersion": "[variables('storageApiVersion')]",
            "type": "Microsoft.Storage/storageAccounts/blobServices/containers",
            "name": "[concat(variables('storageAccountName'), '/default/', variables('storageContainerName'))]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]"
            ],
            "properties": {
                "publicAccess": "None"
            }
        },
        {
            "apiVersion": "[variables('networkApiVersion')]",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[concat(variables('nicExternalNamePrefix'), copyIndex(1))]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]",
                "[resourceId('Microsoft.Network/loadBalancers', variables('lbName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]",
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('publicIPNamePrefix'), copyIndex(1)))]"
            ],
            "properties": {
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
                },
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "primary": true,
                            "privateIPAllocationMethod": "Dynamic",
                            "privateIPAddressVersion": "IPv4",
                            "subnet": {
                                "id": "[variables('subnet1ID')]"
                            },
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('publicIPNamePrefix'), copyIndex(1)))]"
                            },
                            "loadBalancerBackendAddressPools": [
                                {
                                    "id": "[concat(variables('lbResourceId'), '/backendAddressPools/', variables('lbBackendPoolName'))]"
                                }
                            ]
                        }
                    }
                ],
                "enableAcceleratedNetworking": "[parameters('acceleratedNetworking')]"
            },
            "copy": {
                "name": "nicExternalCopy",
                "count": 2
            }
        },
        {
            "apiVersion": "[variables('networkApiVersion')]",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[concat(variables('nicInternalNamePrefix'), copyIndex(1))]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]",
                "[resourceId('Microsoft.Network/loadBalancers', variables('lbName'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "privateIPAddressVersion": "IPv4",
                            "subnet": {
                                "id": "[variables('subnet2ID')]"
                            }
                        }
                    }
                ],
                "enableAcceleratedNetworking": "[parameters('acceleratedNetworking')]",
                "enableIPForwarding": false
            },
            "copy": {
                "name": "nicInternalCopy",
                "count": 2
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "[variables('computeApiVersion')]",
            "name": "[concat(variables('vmNamePrefix'), copyIndex(1))]",
            "location": "[variables('location')]",
            "plan": "[variables('vmImagePlan')]",
            "tags": {
                "resourceNamePrefix": "[parameters('resourceNamePrefix')]"
            },
            "zones": "[if(variables('useAZ'), variables(concat('zone', copyIndex(1))), json('null'))]",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/availabilitySets', variables('availabilitySetName'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('nicExternalNamePrefix'), copyIndex(1)))]",
                "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('nicInternalNamePrefix'), copyIndex(1)))]",
                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]",
                "[resourceId('Microsoft.Storage/storageAccounts/blobServices/containers', variables('storageAccountName'), 'default', variables('storageContainerName'))]"
            ],
            "copy": {
                "name": "vmCopy",
                "count": 2
            },
            "properties": {
                "availabilitySet": "[if(not(variables('useAZ')), variables('availabilitySetRef'), json('null'))]",
                "hardwareProfile": {
                    "vmSize": "[parameters('vmSku')]"
                },
                "storageProfile": {
                    "imageReference": "[variables('imageReference')]",
                    "osDisk": {
                        "osType": "Linux",
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS"
                        }
                    },
                    "dataDisks": [
                        {
                            "diskSizeGB": 30,
                            "lun": 0,
                            "createOption": "Empty",
                            "managedDisk": {
                                "storageAccountType": "Premium_LRS"
                            }
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[concat(variables('vmNamePrefix'), copyIndex(1))]",
                    "adminUsername": "[parameters('vmAdminUsername')]",
                    "adminPassword": "[parameters('vmAdminPassword')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "customData": "[base64(concat('{\"cloud-initd\":\"enable\",\"usr-cli\":\"config router static\\nedit 1\\nset dst 0.0.0.0 0.0.0.0\\nset gateway ', variables('sn1GatewayIP'), '\\nset device port1\\nnext\\nend\\nconfig system ntp\\nset ntpsync enable\\nset type custom\\nconfig ntpserver\\nedit 1\\nset server pool.ntp.org\\nnext\\nend\\nend\\n\",\"HaAzureInit\":\"enable\",\"FwbLicenseBYOL\":\"\",\"flex_token\":\"', createArray(parameters('fortiwebLicenseFortiFlexA'), parameters(' [...]
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('nicExternalNamePrefix'), copyIndex(1)))]",
                            "properties": {
                                "primary": true
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('nicInternalNamePrefix'), copyIndex(1)))]",
                            "properties": {
                                "primary": false
                            }
                        }
                    ]
                }
            }
        }
    ],
    "outputs": {
        "storageAccountName": {
            "type": "string",
            "value": "[variables('storageAccountName')]"
        },
        "fortiwebVM1Name": {
            "type": "string",
            "value": "[concat(variables('vmNamePrefix'), '1')]"
        },
        "fortiwebVM2Name": {
            "type": "string",
            "value": "[concat(variables('vmNamePrefix'), '2')]"
        }
    }
}
